tests/cases/modules/ok/package-cache-decls-main.ari
mod cache_decls;

fn main() -> i64 {
  cache_decls::value()
}
