tests/cases/modules/errors/private-module-struct-type.ari
mod Hidden {
  struct Secret {
    value: i64,
  }
}

struct Holder {
  item: Hidden::Secret,
}

fn main() -> i64 {
  return 0;
}
